Generic Push, click to check

--- a/README
+++ b/README
@@ -1,57 +1,5 @@
-#AcreetionOS GNOME T2 Edition
-Welcome to AcreetionOS GNOME T2 Edition, a member of the AcreetionOS Distribution Product family. AcreetionOS is the premiere semi-independent Linux distribution crafted specifically for the general user. Combining user-centric design, cutting-edge features, and the reliability of Linux, AcreetionOS GNOME T2 Edition sets a new standard for modern operating systems; for those using T2 Macs.
+# AcreetionOS (On the T2 Macbook)
 
-🎯 About AcreetionOS GNOME T2 Edition
-AcreetionOS GNOME T2 Edition is designed to empower everyday users with a Linux experience that is intuitive, seamless, and feature-rich. Built independently from the ground up, AcreetionOS is not based on other mainstream distributions. This allows us to innovate without restrictions, offering a unique blend of stability, performance, and aesthetic appeal.
+This repository is for those who are wanting to use [AcreetionOS]("https://acreetionos.org") on a T2 Macbook. If you don't know what AcreetionOS is, you can check us out [here]("https://acreetionos.live"). You will be able to get whatever information you need from there :)
 
-The GNOME T2 Edition showcases our commitment to simplicity and elegance by leveraging the power of the GNOME desktop environment, enhanced with exclusive customizations that make AcreetionOS stand out from the crowd.
-
-🌟 Why Choose AcreetionOS?
-Semi-independent Foundation
-Unlike most distributions, AcreetionOS is built semi-independently, ensuring a unique and cohesive experience tailored to the needs of general users.
-
-Optimized for Everyday Use
-From productivity to entertainment, AcreetionOS GNOME T2 Edition includes a curated set of applications and tools that work out of the box.
-
-Elegant User Interface
-Powered by GNOME, our desktop environment is refined to deliver a sleek and modern aesthetic.
-
-Unmatched Performance
-Lightweight and efficient, AcreetionOS is optimized to run smoothly on both modern hardware and older machines.
-
-Community-Driven Development
-Our community plays a vital role in shaping the future of AcreetionOS. Suggestions, feedback, and contributions are always welcome.
-
-🔧 Key Features
-Custom GNOME T2 Desktop: Polished for aesthetics and usability..
-Secure and Stable: Built on a solid Linux foundation with regular security updates.
-Seamless Software Management: Access a wide range of applications via our software center, complete with one-click installs.
-System Optimizer Tools: Built-in utilities to keep your system running smoothly.
-Focus on Accessibility: User-friendly tools and settings designed for people of all abilities.
-🚀 Getting Started
-Download AcreetionOS GNOME T2 Edition
-Head to our official website to download the latest ISO image.
-
-Create Installation Media
-Use tools like Etcher, Ventoy, or Rufus to create a bootable USB drive.
-
-Install and Explore
-Boot from the USB, follow the guided installer, and start enjoying AcreetionOS GNOME T2 Edition!
-
-📚 Documentation
-Detailed documentation, including installation guides, FAQs, and tips, can be found in our future Wiki! In the meantime, feel free to email us at acreetionos@gmail.com for any questions you may have!
-
-🙌 Join the Community
-AcreetionOS thrives because of its passionate community. Connect with us:
-
-GitHub: Contribute to the development of AcreetionOS.
-🛠️ Contributing
-Want to help make AcreetionOS even better? Whether you’re a developer, designer, or advocate, we welcome your contributions. Check out our Contribution Guide to get started.
-
-💡 Feedback and Support
-We’re here to help! If you encounter any issues or have suggestions, please visit our Support Page.
-
-📜 License
-AcreetionOS GNOME T2 Edition is open source and distributed under the GPL License.
-
-Thank you for choosing AcreetionOS GNOME T2 Edition. We’re excited to have you on board and can’t wait to see how you make it your own!
+In regards to the specifness of this repo, I have a 2018 Macbook Pro that I'm going to be running AcreetionOS on. If you need support, email me at [My Email]("mailto:sprungles.me@tuta.io"), or head to [Sprungles.org]("https://sprungles.org") to find other ways to get ahold of me!
